hphp/hack/test/typecheck/colon_on_default_label.php.exp
File "colon_on_default_label.php", line 6, characters 12-12:
A colon (':') is expected here. (Parsing[1002])
