hphp/hack/test/typecheck/colon_on_default_label.php
<?hh // partial

function foo($x): void {

  switch ($x) {
    default;
      echo "bye";
  }
}

foo(1);
